@startuml

title __VIEWS's Class Diagram__\n

  namespace usantatecla.mastermind {
    namespace views {
      class usantatecla.mastermind.views.ColorView {
          {static} + INITIALS : char[]
          + ColorView()
          + getInitial()
          {static} + getInstance()
          {static} ~ allInitials()
      }
    }
  }
  

  namespace usantatecla.mastermind {
    namespace views {
      class usantatecla.mastermind.views.ErrorView {
          {static} + MESSAGES : String[]
          + ErrorView()
          + getMessage()
      }
    }
  }
  

  namespace usantatecla.mastermind {
    namespace views {
      enum MessageView {
        ATTEMPTS
        LOOSER
        MENU_TITLE
        PROPOSED_COMBINATION
        PROPOSE_COMMAND
        REDO_COMMAND
        RESULT
        RESUME
        SECRET
        TITLE
        UNDO_COMMAND
        WINNER
        message
      }
    }
  }
  

  namespace usantatecla.mastermind {
    namespace views {
      abstract class usantatecla.mastermind.views.View {
          + interact()
      }
    }
  }
  

  usantatecla.mastermind.views.ColorView o-- usantatecla.mastermind.types.Color : color
  usantatecla.mastermind.views.ErrorView o-- usantatecla.mastermind.types.Error : error
  usantatecla.mastermind.views.View .up.|> usantatecla.mastermind.controllers.ControllersVisitor


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
